# signet

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.exex  Dockerfile.pecorino  Dockerfile.sidecar  Makefile  README.md  docker-compose.yaml  shell.nix
.cargo/: audit.toml
.github/genesis/: parmigiana-host.genesis.json
.github/scripts/genesis/test/: AllocsTest.t.sol  Permit2Orders.t.sol  Permit2Passage.t.sol  RollupOrders.t.sol  RollupPassage.t.sol  Tokens.t.sol  WETH.t.sol
.github/scripts/genesis/test/interfaces/: IFiatToken.sol  ISimpleToken.sol  IWETH.sol
.github/workflows/: docker-ecr-pecorino.yml  docker-ecr.yml  docker-ghcr.yml  genesis-tests.yml  rust.yml
signet/: Cargo.toml
signet-exex/: Cargo.toml
signet-exex/src/: lib.rs  main.rs
signet-sidecar/: Cargo.toml
signet-sidecar/src/: lib.rs  main.rs
signet/src/: lib.rs
src/: forward.rs  ipc.rs  lib.rs  remote_oracle.rs  rollup.rs  signet.rs  signet_rollup.rs
