[workspace]
members = ["signet-exex", "signet-sidecar"]
resolver = "3"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.ci-rust]
inherits = "dev"
strip = true
debug = false
incremental = false
