[package]
name = "signet-sidecar"
version = "1.0.0-rc.8"
edition = "2024"
rust-version = "1.88"
authors = ["init4"]
license = "UNLICENSED"
homepage = "https://github.com/init4tech/signet"
repository = "https://github.com/init4tech/signet"

[dependencies]
init4-bin-base = { version = "0.18.0-rc.8", features = ["alloy"], default-features = false }

# Node Components
signet-blobber = { git = "https://github.com/init4tech/node-components", branch = "develop" }
signet-host-rpc = { git = "https://github.com/init4tech/node-components", branch = "develop" }
signet-node = { git = "https://github.com/init4tech/node-components", branch = "develop" }
signet-node-config = { git = "https://github.com/init4tech/node-components", branch = "develop", features = ["postgres"] }
signet-rpc = { git = "https://github.com/init4tech/node-components", branch = "develop" }

eyre = "0.6.12"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.28", features = ["rustls-tls-native-roots", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

[[bin]]
name = "signet-sidecar"
path = "src/main.rs"
test = false
