[package]
name = "signet-sidecar"
version = "1.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["init4"]
license = "UNLICENSED"
homepage = "https://github.com/init4tech/signet"
repository = "https://github.com/init4tech/signet"

[dependencies]
init4-bin-base = { version = "0.21", features = ["alloy"], default-features = false }

# Node Components
signet-blobber = "0.18.0"
signet-host-rpc = "0.18.0"
signet-node = "0.18.0"
signet-node-config = { version = "0.18.0", features = ["postgres"] }
signet-rpc = "0.18.0"

eyre = "0.6.12"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.28", features = ["rustls-tls-native-roots", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

[[bin]]
name = "signet-sidecar"
path = "src/main.rs"
test = false
