[package]
name = "signet"
version = "1.0.0-rc.10"
edition = "2024"
rust-version = "1.92"
authors = ["init4"]
license = "UNLICENSED"
homepage = "https://github.com/init4tech/signet"
repository = "https://github.com/init4tech/signet"

[dependencies]
init4-bin-base = { version = "0.19", features = ["alloy"], default-features = false }

# Node Components
signet-node = { git = "https://github.com/init4tech/node-components", tag = "v0.16.0" }
signet-node-config = { git = "https://github.com/init4tech/node-components", tag = "v0.16.0" }

reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.3" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.3" }

eyre = "0.6.12"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.28", features = ["rustls-tls-native-roots", "json"] }
tracing = "0.1.44"

[[bin]]
name = "signet"
path = "src/main.rs"
test = false
